src/components/Charts/ChataChart/ChataChart.scss
.react-autoql-chart-header-container {
  width: 100%;
  flex: 0 0 auto;

  &.loading {
    visibility: hidden;
  }

  .react-autoql-slider-wrapper {
    font-size: var(--react-autoql-chart-font-size, 12px);
    &.mobile {
      font-size: 0.5rem;
    }
  }
}

.react-autoql-chart-container {
  position: relative;
  width: 100%;
  height: 100%;
  max-height: 100%;
  flex-grow: 1;
  flex-shrink: 1;
  flex-basis: 100vh;
  overflow: hidden;
  color: var(--react-autoql-text-color-primary);
  background: var(--react-autoql-background-color-secondary);

  &.hidden {
    position: absolute;
    visibility: hidden;
    flex: 0 0 0;
    opacity: 0;
    flex-basis: 0 !important;
    pointer-events: none;
  }

  svg {
    // set transparent in css but keep background in inline style for exporting to png
    background: transparent !important;
    color: var(--react-autoql-text-color-primary) !important;
  }

  transition: opacity 0.2s ease;
  &.loading {
    opacity: 0;
    transition: none;
  }

  &.loading-rows {
    pointer-events: none;
  }

  .legend-hidden-field-arrow {
    outline: none !important;
  }

  .legendCells {
    .cell {
      &.hidden {
        text {
          color: var(--react-autoql-background-disabled);
          opacity: 0.4 !important;
        }
        line.swatch,
        path.swatch {
          fill: var(--react-autoql-background-color-disabled) !important;
          stroke: var(--react-autoql-background-color-disabled) !important;
        }
      }

      &:hover path.swatch {
        stroke-width: 2px;
      }
      &:hover line.swatch {
        stroke-width: 3px;
      }

      text:hover {
        font-weight: 600;
      }
    }
  }

  path.swatch {
    outline: none !important;
    fill-opacity: 1;
    &:hover,
    &.active {
      fill-opacity: 0.7;
    }
  }
  line.swatch {
    stroke-width: 2px;
    outline: none !important;
    &:hover,
    &.active {
      stroke-width: 3px;
    }
  }

  /* These are not inline styles since they do not apply to saved PNG charts */
  .bar,
  .column,
  .stacked-bar,
  .stacked-column {
    cursor: pointer;

    // Setting a transparent stroke allows a larger hover area
    stroke: transparent;
    stroke-width: 8px;
  }

  .slice {
    cursor: pointer;
    stroke: transparent;
    stroke-width: 3px;
  }

  .point {
    outline: none !important;
    transition: stroke 0.3s ease, fill-opacity 0.3s ease;
    stroke-width: 8px;

    &:hover,
    &.active {
      stroke: currentColor !important;
      fill: currentColor !important;
      fill-opacity: 1 !important;
    }
  }

  .distribution-hover-line {
    outline: none !important;
    pointer-events: stroke;
  }

  .bar,
  .column,
  .line,
  .slice,
  .stacked-area,
  .stacked-bar,
  .stacked-column {
    transition: fill-opacity 0.3s ease;
    fill-opacity: 1 !important;
    outline: none !important;

    &:hover,
    &.active {
      fill-opacity: 0.7 !important;
    }
  }
  .line-dot {
    outline: none !important;
    stroke-linecap: round;
    stroke-linejoin: round;

    &.hidden-dot {
      .line-dot-inner-circle {
        transition: opacity 0.2s ease;
        fill: currentColor !important;
      }
    }

    &:not(.hidden-dot) {
      .line-dot-inner-circle {
        fill: var(--react-autoql-background-color-secondary) !important;
      }

      .line-dot-outer-circle,
      .line-dot-inner-circle {
        transition: fill 0.3s ease, stroke 0.3s ease;
      }
    }

    &:hover .line-dot-inner-circle,
    &.active .line-dot-inner-circle {
      fill: currentColor !important;
      opacity: 1 !important;
    }
  }

  .vertex-dot {
    transition: opacity 0.3s ease;
    opacity: 0 !important;
    outline: none !important;
    &:hover,
    &.active {
      opacity: 1 !important;
    }
  }
  .square {
    transition: fill 0.2s ease;
    outline: none !important;
    &:hover,
    &.active {
      stroke-opacity: 0.5;
      stroke: currentColor;
      stroke-width: 1px;
      fill: currentColor;
    }
  }

  .circle {
    transition: fill-opacity 0.2s ease;
    fill-opacity: 0.7;
    outline: none !important;
    &:hover,
    &.active {
      fill-opacity: 1 !important;
    }
  }

  g.tick {
    text {
      cursor: default;
    }

    line {
      pointer-events: none;
    }
  }

  .line,
  .line-outer {
    pointer-events: none;
  }

  .react-autoql-heatmap-chart g.tick line,
  .react-autoql-bubble-chart g.tick line {
    pointer-events: none;
    opacity: 0 !important; // we need to render the tick lines so the bounding box calcs are correct. But we dont want to see them
  }

  .axis {
    font-family: inherit;
  }

  .pie-chart .labels {
    font-size: 12px;
    font-weight: 600;
  }
}

.chart-loader {
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
  pointer-events: none;
  opacity: 0.6;
  background-color: var(--react-autoql-background-color-primary);
  color: var(--react-autoql-accent-color);
  border-radius: 10%;
  pointer-events: none;

  &.chart-page-loader {
    top: 25%;
    bottom: 0;
    right: 0;
    left: 50%;
    width: 40px;
    height: 40px;
  }
}

